tests/negative/key_on_non_object.urb
n = 1 0,
n["a"] = 1,
